# MinervaBot

./: .gitignore  PatreonBot.cabal  README.md  stack.yaml
src/: DB.hs  Main.hs  Patreon.hs
