name:                PatreonBot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Xandaros/PatreonBot#readme
license:             BSD3
license-file:        LICENSE
author:              Xandaros
maintainer:          mz-bremerhaven@gmail.com
copyright:           (C) 2017 Xandaros
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable PatreonBot
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       DB
                     , Patreon
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , discord-hs
                     , text
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , servant
                     , servant-client
                     , lens
                     , time
                     , transformers
                     , mtl
                     , pipes
                     , aeson
                     , unordered-containers
                     , http-api-data
                     , http-client
                     , http-client-tls
                     , http-types
                     , either
                     , bytestring
                     , lens-aeson
                     , vector
                     , containers
                     , process
